# libgit2Example

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.c
src/: diff.c  threaded.c  untracked.c
